[gd_scene load_steps=2 format=3 uid="uid://beb864v1at0b4"]

[ext_resource type="Script" uid="uid://dw0vaonr0316r" path="res://diapositivas/components/MatrixController.gd" id="1_matrix_controller"]

[node name="MatrixController" type="VBoxContainer"]
theme_override_constants/separation = 5
script = ExtResource("1_matrix_controller")

[node name="MatrixLabel" type="Label" parent="."]
layout_mode = 2
text = "A ="
horizontal_alignment = 1

[node name="MatrixContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Row1" type="HBoxContainer" parent="MatrixContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="LeftBracket1" type="Label" parent="MatrixContainer/Row1"]
layout_mode = 2
text = "["

[node name="A11" type="SpinBox" parent="MatrixContainer/Row1"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.1
value = 1.0
alignment = 1

[node name="A12" type="SpinBox" parent="MatrixContainer/Row1"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.1
value = 2.0
alignment = 1

[node name="RightBracket1" type="Label" parent="MatrixContainer/Row1"]
layout_mode = 2
text = "]"

[node name="Row2" type="HBoxContainer" parent="MatrixContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="LeftBracket2" type="Label" parent="MatrixContainer/Row2"]
layout_mode = 2
text = "["

[node name="A21" type="SpinBox" parent="MatrixContainer/Row2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.1
value = 3.0
alignment = 1

[node name="A22" type="SpinBox" parent="MatrixContainer/Row2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.1
value = 4.0
alignment = 1

[node name="RightBracket2" type="Label" parent="MatrixContainer/Row2"]
layout_mode = 2
text = "]"
